5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3119/executions/1807_2571.log
== TEST (2019-06-13 01:51:21) 
-- CODE:
a = input("digite a string")

n = ""
for i in len(a):
	if(a[i] =! "a" and a[i] =! "A"):
		a[i] = n[i]
		
print(n)

-- ERROR:
File "XXXX", line 5
    if(a[i] =! "a" and a[i] =! "A"):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 01:51:59) 
-- CODE:
a = input("digite a string")

n = ""
for i in len(a):
	if(a[i] != "a" and a[i] != "A"):
		a[i] = n[i]
		
print(n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    for i in len(a):
TypeError: 'int' object is not iterable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 01:52:43) 
-- CODE:
a = input("digite a string")

n = ""
for i in range(len(a)):
	if(a[i] != "a" and a[i] != "A"):
		a[i] = n[i]
		
print(n)

-- EXECUTION TIME:
0.793402
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2571/main.py", line 6, in <module>
    a[i] = n[i]
IndexError: string index out of range

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 01:52:43) 
-- CODE:
a = input("digite a string")

n = ""
for i in range(len(a)):
	if(a[i] != "a" and a[i] != "A"):
		a[i] = n[i]
		
print(n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    a[i] = n[i]
IndexError: string index out of range
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 01:53:17) 
-- CODE:
a = input("digite a string")

n = ""
for i in range(len(a)):
	if(a[i] != "a" and a[i] != "A"):
		a[i] = n[i]
		
print(n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    a[i] = n[i]
IndexError: string index out of range
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 01:56:01) 
-- CODE:
a = input("digite a string")

n = ""
for i in range(len(a)):
	if(a[i] != "a" and a[i] != "A"):
		n = n + a[i]
		
print(n)

-- OUTPUT:
Instituto_de_Computco-ICOMP-UFM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 01:56:26) 
-- CODE:
a = input("digite a string")

n = ""
for i in range(len(a)):
	if(a[i] != "a" and a[i] != "A"):
		n = n + a[i]
		
print(n)

-- EXECUTION TIME:
0.856144
-- TEST CASE 1:
---- input:
Instituto_de_Computacao-ICOMP-UFAM
---- correct output:
Instituto_de_Computco-ICOMP-UFM
---- user output:
Instituto_de_Computco-ICOMP-UFM
-- TEST CASE 2:
---- input:
a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-aa-a-a-a-a-a-a-a-a-a-a
---- correct output:
-----------------------------
---- user output:
-----------------------------
-- TEST CASE 3:
---- input:
.aaaaaaaaaaaaaaaaaaaaa.bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb.aaaaaaaaaaaaaaaaa.
---- correct output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
---- user output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
